[gd_scene load_steps=21 format=4 uid="uid://dhqmxburisura"]

[ext_resource type="PackedScene" uid="uid://c8h8jb7nr5v21" path="res://map.tscn" id="1_e2o6t"]
[ext_resource type="Script" uid="uid://bc5w33wvctxal" path="res://scripts/game.gd" id="1_fc0e3"]
[ext_resource type="Texture2D" uid="uid://db8l3jgl3fd57" path="res://resources/Taffer_20x20.png" id="2_7jktm"]
[ext_resource type="PackedScene" uid="uid://dhxy1e5cp8dus" path="res://player.tscn" id="2_feb5d"]
[ext_resource type="Shader" uid="uid://b81fm1l76m21i" path="res://blur.gdshader" id="3_ryrav"]
[ext_resource type="TileSet" uid="uid://0pd0b5jvu8eg" path="res://Taffer_Tile_Set.tres" id="4_7jktm"]
[ext_resource type="PackedScene" uid="uid://b74nk12geioaf" path="res://menu_scenes/game_end.tscn" id="4_eow3j"]
[ext_resource type="PackedScene" uid="uid://dmsnywjwx4480" path="res://menu_scenes/main_menu.tscn" id="5_vef74"]
[ext_resource type="PackedScene" uid="uid://holnjecmi170" path="res://menu_scenes/pause_menu.tscn" id="6_hve3p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fc0e3"]
atlas = ExtResource("2_7jktm")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5wjh"]
size = Vector2(100, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vef74"]
size = Vector2(60, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hve3p"]
size = Vector2(80, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mfdv2"]
size = Vector2(80, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iotsf"]
size = Vector2(60, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lc2xo"]
size = Vector2(20, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_215e1"]
size = Vector2(100, 100)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e2o6t"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_detail = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ryrav"]
content_margin_top = 10.0
content_margin_bottom = 40.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eow3j"]
shader = ExtResource("3_ryrav")
shader_parameter/lod = 4.0

[node name="Main" type="Node" node_paths=PackedStringArray("goal_display", "itemlist")]
process_mode = 3
script = ExtResource("1_fc0e3")
goal_display = NodePath("UI/Game/Panel/HBoxContainer/CenterRow/GoalsDisplay")
itemlist = NodePath("UI/Game/Panel/HBoxContainer/BottomRow/Items")
icon_atlas = SubResource("AtlasTexture_fc0e3")

[node name="Background" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_mode = 1
layer = -1

[node name="ColorRect" type="ColorRect" parent="Background"]
z_index = -7
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0, 0, 0, 1)

[node name="Game" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Player" parent="Game" node_paths=PackedStringArray("map") instance=ExtResource("2_feb5d")]
unique_name_in_owner = true
process_mode = 1
position = Vector2(140, 300)
map = NodePath("../Map")

[node name="Camera" type="Camera2D" parent="Game/Player"]
unique_name_in_owner = true
offset = Vector2(175, 5)
position_smoothing_enabled = true
position_smoothing_speed = 20.0

[node name="Map" parent="Game" instance=ExtResource("1_e2o6t")]
unique_name_in_owner = true
process_mode = 1
top_level = true
occlusion_enabled = false

[node name="Fog" type="TileMapLayer" parent="Game/Map"]
modulate = Color(0, 0, 0, 1)
z_index = 2
tile_map_data = PackedByteArray("AAAAAAgAAQALAA0AAAAAAAkAAQALAA0AAAAAAAoAAQALAA0AAAAAAAsAAQALAA0AAAAAAAwAAQALAA0AAAAAAA0AAQALAA0AAAAAAA4AAQALAA0AAAAAAA8AAQALAA0AAAAAABAAAQALAA0AAAAAABEAAQALAA0AAAAAABIAAQALAA0AAAABABIAAQALAA0AAAABABEAAQALAA0AAAABAA0AAQALAA0AAAABAAwAAQALAA0AAAABAAsAAQALAA0AAAABAAgAAQALAA0AAAACAAgAAQALAA0AAAADAAgAAQALAA0AAAAEAAgAAQALAA0AAAACAAkAAQALAA0AAAADAAkAAQALAA0AAAAEAAkAAQALAA0AAAACAAoAAQALAA0AAAAEAAoAAQALAA0AAAAEAAsAAQALAA0AAAAEAAwAAQALAA0AAAADAAwAAQALAA0AAAACAAwAAQALAA0AAAACAA4AAQALAA0AAAACAA0AAQALAA0AAAADAA0AAQALAA0AAAAEAA0AAQALAA0AAAAEAA4AAQALAA0AAAAEAA8AAQALAA0AAAAEABAAAQALAA0AAAAEABEAAQALAA0AAAAEABIAAQALAA0AAAADABIAAQALAA0AAAACABIAAQALAA0AAAADABEAAQALAA0AAAACABEAAQALAA0AAAACABAAAQALAA0AAAAFABEAAQALAA0AAAAFABIAAQALAA0AAAAGABIAAQALAA0AAAAHABIAAQALAA0AAAAIABIAAQALAA0AAAAJABIAAQALAA0AAAAKABIAAQALAA0AAAALABIAAQALAA0AAAAMABIAAQALAA0AAAANABIAAQALAA0AAAAOABIAAQALAA0AAAAPABIAAQALAA0AAAAQABIAAQALAA0AAAAQABEAAQALAA0AAAAPABEAAQALAA0AAAANABEAAQALAA0AAAAKABEAAQALAA0AAAAJABEAAQALAA0AAAAIABEAAQALAA0AAAAIABAAAQALAA0AAAAJABAAAQALAA0AAAAKABAAAQALAA0AAAAOABAAAQALAA0AAAAPABAAAQALAA0AAAAQABAAAQALAA0AAAAQAA8AAQALAA0AAAAPAA8AAQALAA0AAAAOAA8AAQALAA0AAAAOAA4AAQALAA0AAAAPAA4AAQALAA0AAAAQAA4AAQALAA0AAAAQAA0AAQALAA0AAAAPAA0AAQALAA0AAAAOAA0AAQALAA0AAAAQAAwAAQALAA0AAAAPAAwAAQALAA0AAAAOAAwAAQALAA0AAAANAAwAAQALAA0AAAAMAAwAAQALAA0AAAALAAwAAQALAA0AAAAKAAwAAQALAA0AAAAJAAwAAQALAA0AAAAIAAwAAQALAA0AAAAHAAwAAQALAA0AAAAGAAwAAQALAA0AAAAFAAwAAQALAA0AAAAHAA0AAQALAA0AAAAIAA0AAQALAA0AAAAJAA0AAQALAA0AAAAKAA0AAQALAA0AAAAKAA4AAQALAA0AAAAKAA8AAQALAA0AAAALAAsAAQALAA0AAAALAAoAAQALAA0AAAALAAkAAQALAA0AAAALAAgAAQALAA0AAAALAAcAAQALAA0AAAAMAAcAAQALAA0AAAAMAAgAAQALAA0AAAAMAAkAAQALAA0AAAAMAAoAAQALAA0AAAAMAAsAAQALAA0AAAANAAkAAQALAA0AAAAPAAcAAQALAA0AAAAPAAgAAQALAA0AAAAPAAkAAQALAA0AAAAPAAoAAQALAA0AAAAPAAsAAQALAA0AAAAQAAsAAQALAA0AAAAQAAoAAQALAA0AAAAQAAkAAQALAA0AAAAQAAgAAQALAA0AAAAQAAcAAQALAA0AAAAOAAcAAQALAA0AAAANAAcAAQALAA0AAAAKAAsAAQALAA0AAAAJAAsAAQALAA0AAAAIAAsAAQALAA0AAAAHAAsAAQALAA0AAAAGAAsAAQALAA0AAAAGAAoAAQALAA0AAAAGAAkAAQALAA0AAAAGAAgAAQALAA0AAAAGAAcAAQALAA0AAAAGAAYAAQALAA0AAAAFAAYAAQALAA0AAAAEAAYAAQALAA0AAAAEAAcAAQALAA0AAAAFAAcAAQALAA0AAAAHAAYAAQALAA0AAAAIAAYAAQALAA0AAAAJAAYAAQALAA0AAAAKAAYAAQALAA0AAAALAAYAAQALAA0AAAAKAAcAAQALAA0AAAAKAAUAAQALAA0AAAAKAAQAAQALAA0AAAAKAAMAAQALAA0AAAAKAAIAAQALAA0AAAAKAAEAAQALAA0AAAAKAAAAAQALAA0AAAAJAAAAAQALAA0AAAAIAAAAAQALAA0AAAAHAAAAAQALAA0AAAAGAAAAAQALAA0AAAAFAAAAAQALAA0AAAAEAAAAAQALAA0AAAAEAAEAAQALAA0AAAAEAAIAAQALAA0AAAAEAAMAAQALAA0AAAAEAAQAAQALAA0AAAAEAAUAAQALAA0AAAAHAAUAAQALAA0AAAAIAAUAAQALAA0AAAAJAAUAAQALAA0AAAAJAAEAAQALAA0AAAAIAAEAAQALAA0AAAAHAAEAAQALAA0AAAAGAAEAAQALAA0AAAAHAAMAAQALAA0AAAANAA8AAQALAA0AAAA=")
tile_set = ExtResource("4_7jktm")
collision_enabled = false

[node name="Areas" type="Node" parent="Game/Map"]
unique_name_in_owner = true

[node name="Living Room" type="Area2D" parent="Game/Map/Areas"]
unique_name_in_owner = true
position = Vector2(150, 310)
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Map/Areas/Living Room"]
shape = SubResource("RectangleShape2D_j5wjh")

[node name="Study" type="Area2D" parent="Game/Map/Areas"]
unique_name_in_owner = true
position = Vector2(50, 310)
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Map/Areas/Study"]
shape = SubResource("RectangleShape2D_vef74")

[node name="Kitchen" type="Area2D" parent="Game/Map/Areas"]
unique_name_in_owner = true
position = Vector2(270, 310)
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Map/Areas/Kitchen"]
shape = SubResource("RectangleShape2D_j5wjh")

[node name="Bedroom" type="Area2D" parent="Game/Map/Areas"]
unique_name_in_owner = true
position = Vector2(180, 190)
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Map/Areas/Bedroom"]
shape = SubResource("RectangleShape2D_hve3p")

[node name="Pantry" type="Area2D" parent="Game/Map/Areas"]
unique_name_in_owner = true
position = Vector2(280, 200)
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Map/Areas/Pantry"]
shape = SubResource("RectangleShape2D_mfdv2")

[node name="Bathroom" type="Area2D" parent="Game/Map/Areas"]
unique_name_in_owner = true
position = Vector2(50, 210)
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Map/Areas/Bathroom"]
shape = SubResource("RectangleShape2D_iotsf")

[node name="Hallway" type="Area2D" parent="Game/Map/Areas"]
unique_name_in_owner = true
position = Vector2(110, 190)
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Map/Areas/Hallway"]
shape = SubResource("RectangleShape2D_lc2xo")

[node name="Master Bedroom" type="Area2D" parent="Game/Map/Areas"]
unique_name_in_owner = true
position = Vector2(150, 70)
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Map/Areas/Master Bedroom"]
shape = SubResource("RectangleShape2D_215e1")

[node name="UI" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_mode = 1

[node name="Game" type="Control" parent="UI"]
layout_direction = 4
layout_mode = 3
anchor_left = 0.694
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.511963
offset_right = 0.511963
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="ColorRect" type="ColorRect" parent="UI/Game"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0, 0, 1)

[node name="Panel" type="PanelContainer" parent="UI/Game"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e2o6t")

[node name="HBoxContainer" type="VBoxContainer" parent="UI/Game/Panel"]
layout_mode = 2
alignment = 1

[node name="TopMargin" type="PanelContainer" parent="UI/Game/Panel/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ryrav")

[node name="TopRow" type="VBoxContainer" parent="UI/Game/Panel/HBoxContainer/TopMargin"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LocationLabel" type="Label" parent="UI/Game/Panel/HBoxContainer/TopMargin/TopRow"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
text = "Location"

[node name="LocationDisplay" type="RichTextLabel" parent="UI/Game/Panel/HBoxContainer/TopMargin/TopRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Living Room"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterRow" type="VBoxContainer" parent="UI/Game/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GoalsLabel" type="Label" parent="UI/Game/Panel/HBoxContainer/CenterRow"]
layout_mode = 2
size_flags_horizontal = 4
text = "Goals"

[node name="GoalsDisplay" type="RichTextLabel" parent="UI/Game/Panel/HBoxContainer/CenterRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
fit_content = true

[node name="BottomRow" type="VBoxContainer" parent="UI/Game/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InvLabel" type="Label" parent="UI/Game/Panel/HBoxContainer/BottomRow"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Inventory"

[node name="Items" type="ItemList" parent="UI/Game/Panel/HBoxContainer/BottomRow"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
allow_search = false
auto_height = true

[node name="Menu" type="Control" parent="UI"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BlurBackground" type="ColorRect" parent="UI/Menu"]
material = SubResource("ShaderMaterial_eow3j")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="EndScreen" parent="UI/Menu" instance=ExtResource("4_eow3j")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="MainMenu" parent="UI/Menu" instance=ExtResource("5_vef74")]
unique_name_in_owner = true
layout_mode = 1

[node name="PauseMenu" parent="UI/Menu" instance=ExtResource("6_hve3p")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="start_game" from="." to="Game/Player" method="_on_start"]
[connection signal="demom_touch" from="Game/Player" to="." method="_on_player_demom_touch"]
[connection signal="item_pickup" from="Game/Player" to="." method="_on_player_item_pickup"]
[connection signal="location_update" from="Game/Player" to="." method="_on_player_location_update"]
[connection signal="pressed" from="UI/Menu/EndScreen/Controls/StartButton" to="." method="_on_start"]
[connection signal="pressed" from="UI/Menu/MainMenu/Controls/StartButton" to="." method="_on_start"]
[connection signal="pressed" from="UI/Menu/PauseMenu/Controls/StartButton" to="." method="_on_unpause"]

[editable path="UI/Menu/EndScreen"]
[editable path="UI/Menu/MainMenu"]
[editable path="UI/Menu/PauseMenu"]
